// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<UnstyledButton
  className="css-1e11s1h-Button css-16x0j7h0"
  disabled={false}
  priority="primary"
>
  Button
</UnstyledButton>
`;

exports[`Button renders normal link 1`] = `
<UnstyledButton
  className="css-a8laap-Button css-16x0j7h0"
  disabled={false}
  href="/some/relative/url"
>
  Normal Link
</UnstyledButton>
`;

exports[`Button renders react-router link 1`] = `
<UnstyledButton
  className="css-a8laap-Button css-16x0j7h0"
  disabled={false}
  to="/some/route"
>
  Router Link
</UnstyledButton>
`;
